[package]
name = "floem_vello_renderer"
version.workspace = true
edition.workspace = true
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[dependencies]
peniko = { workspace = true }
parley = { workspace = true }
wgpu = { workspace = true }

anyhow = "1.0"
vello = "0.9.0"
vello_svg = { git = "https://github.com/becmer/vello_svg.git", rev = "119ecd86b329" }
floem_renderer = { path = "../renderer", version = "0.2.0" }
