[package]
name = "floem_vger_renderer"
version.workspace = true
edition.workspace = true
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[dependencies.floem-vger-rs]
git = "https://github.com/lapce/vger-rs"
rev = "fd9128313f8c4184d6b8ecacd4b3dc89a07e6008"
package = "floem-vger"

[dependencies]
image = { workspace = true }
resvg = { workspace = true }
peniko = { workspace = true }
wgpu = { workspace = true }
parley = { workspace = true }
swash = { workspace = true }

anyhow = "1.0"
floem_renderer = { path = "../renderer", version = "0.2.0" }
